Added logo, updated style

--- a/static/style.css
+++ b/static/style.css
@@ -6,3 +6,8 @@
 body{
 	background-color: #FCFFF5;
 }
+
+h1 { font-size: 34px; line-height: 120%; }
+h2 { font-size: 20px; }
+p  { font-size: 14px; }
+
