--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,16 @@ h1 { font-size: 34px; line-height: 120%; }
 h2 { font-size: 20px; }
 p  { font-size: 14px; }
 
+legend {
+    background-color: #000;
+    color: #fff;
+    padding: 3px 6px;
+}
+label {
+    display: inline-block;
+    text-align: right;
+    width: 20%;
+}
 
 #member_id {
    text-align: center;
