--- a/static/style.css
+++ b/static/style.css
@@ -62,3 +62,11 @@ tr.Forgot{
   background: yellow;
   color: black;
 }
+
+table.SQLoutput{
+    border-collapse:collapse;
+}
+table.SQLoutput, th, td{
+    border: 1px solid black;
+    padding: 10px;
+}
