--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,7 @@ tr.Forgot{
 table.SQLoutput{
     border-collapse:collapse;
 }
-table.SQLoutput, th, td{
+table.SQLoutput, th.SQLoutput, td.SQLoutput{
     border: 1px solid black;
     padding: 10px;
 }
