Prettify Guest Station

--- a/static/style.css
+++ b/static/style.css
@@ -85,6 +85,37 @@ input#register{
   height: 4em;
 }
 
+.button {
+    background-color: #3E606F;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+	border-radius: 15px;
+    cursor: pointer;
+}
+
+.btnGuest{
+    padding: 20px 60px;
+    font-size: 32px;
+    border: none;
+	border-radius: 15px;
+    cursor: pointer;
+}
+
+.btnGuest#firstTime, .btnGuest#returning {
+    background-color: rgb(241,137,3);
+    color: black;
+}
+
+.btnGuest#leaving{
+    background-color: rgb(0,92,185);
+    color: white;
+}
+
+table.header{
+    width: 90%;
+}
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
