--- a/static/style.css
+++ b/static/style.css
@@ -173,3 +173,23 @@ table.teams {
 table.teams, th.teams, td.teams {
     border: 1px solid black;
 }
+
+td.clBasic {
+    background-color: red;
+    color: white;
+}
+td.clCertified{
+    background-color: green;
+}
+td.clDOF{
+    background-color: orange;
+}
+td.clInstructor{
+    background-color: blue;
+    color: white;
+}
+td.clCertifier{
+    background-color: black;
+    color: white;
+}
+
