--- a/static/style.css
+++ b/static/style.css
@@ -193,3 +193,18 @@ td.clCertifier{
     color: white;
 }
 
+table.certifications {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+table.certifications th, table.certifications td{
+   border: 1px solid black;
+   font-size: small;
+}
+table.certifications th{
+    font-weight: bold;
+    background-color: white;
+    color: black;
+}
+
