Make certifier gray

--- a/static/style.css
+++ b/static/style.css
@@ -189,7 +189,7 @@ td.clInstructor{
     color: white;
 }
 td.clCertifier{
-    background-color: black;
+    background-color: gray;
     color: white;
 }
 
