--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,10 @@ label {
     text-align: right;
     width: 20%;
 }
+label.normal{
+    text-align: left;
+    display: inline;
+}
 
 #member_id {
    text-align: center;
