--- a/static/style.css
+++ b/static/style.css
@@ -220,3 +220,6 @@ button.deactivate {
 table.teamMembers {
   border-spacing: 10px;
 }
+pre code {
+    font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
+}
