Made links prettier

--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,8 @@ h1 { font-size: 34px; line-height: 120%; }
 h2 { font-size: 20px; }
 p  { font-size: 14px; }
 
+span.small { font-size: 12px; }
+
 legend {
     background-color: #000;
     color: #fff;
